plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '3.2.6'
	id 'io.spring.dependency-management' version '1.1.5'
}

group = 'student.management7'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}
configurations {
	compliteOnly{
		extendsFrom annotationProcessor
	}
}
repositories {
	mavenCentral()
}
tasks.withType(JavaCompile) {
	options.compilerArgs += ["--enable-preview"]
}

dependencies {
	//Spring Boot
	implementation 'org.springframework.boot:spring-boot-starter-web'
	//Thymeleaf
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	//Apache Commons Lang
	implementation 'org.apache.commons:commons-lang3:3.14.0'

	//OpenAPI Generator
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

	//Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	//MySQLドライバ
	runtimeOnly 'com.mysql:mysql-connector-j'

	//MyBatis
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'

	implementation 'org.mockito:mockito-core:5.0.0' // 最新のバージョンを利用

	//APサーバー(Tomcat)
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'

	//SpringBoot Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	//MyBatis Test
	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
	//H2(InMemoryDB)
	testImplementation 'com.h2database:h2:2.2.224'

	//javax.validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
	testImplementation 'org.mockito:mockito-core:5.0.0' // 最新のバージョンを利用

}
test {
	include '**/StudentConverterTest.*'
	include '**/StudentRepositoryTest*'
	include '**/StudentControllerTest*'
	include '**/StudentServiceTest*'
}
test {
	useJUnitPlatform()
	testLogging {
		events "passed", "failed", "skipped"
		showStandardStreams = true
	}
}

tasks.named('test') {
	useJUnitPlatform()
}

repositories {
	mavenCentral()  // H2 の依存関係を取得できるリポジトリ
}

